--- a/ReactNativeExample3X/package.json
+++ b/ReactNativeExample3X/package.json
@@ -10,9 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native-stack": "^6.9.2",
     "@taboola/rnt-dev": "^3.0.0-beta.1",
     "react": "17.0.2",
-    "react-native": "0.68.5"
+    "react-native": "0.68.5",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
