--- a/ReactNativeExample3X/package.json
+++ b/ReactNativeExample3X/package.json
@@ -10,12 +10,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/material-top-tabs": "^6.3.1",
+    "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.2",
     "@taboola/rnt-dev": "^3.0.0-beta.1",
     "react": "17.0.2",
     "react-native": "0.68.5",
+    "react-native-pager-view": "^6.1.1",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2"
+    "react-native-screens": "^3.18.2",
+    "react-native-tab-view": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
