--- a/ReactNativeExample3X/package.json
+++ b/ReactNativeExample3X/package.json
@@ -19,7 +19,8 @@
     "react-native-pager-view": "^6.1.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
-    "react-native-tab-view": "^3.3.0"
+    "react-native-tab-view": "^3.3.0",
+    "react-native-webview": "^11.26.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
