--- a/ReactNativeExample3X/package.json
+++ b/ReactNativeExample3X/package.json
@@ -13,7 +13,7 @@
     "@react-navigation/material-top-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.2",
-    "@taboola/react-native-plugin-3x": "^3.0.0-beta.1",
+    "@taboola/react-native-plugin-3x": "^3.0.0",
     "react": "17.0.2",
     "react-native": "0.68.5",
     "react-native-pager-view": "^6.1.1",
