--- a/ReactNativeExample3X/package.json
+++ b/ReactNativeExample3X/package.json
@@ -14,12 +14,13 @@
     "@react-navigation/material-top-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.2",
+    "@shopify/flash-list": "^1.6.4",
     "@taboola/react-native-plugin-3x": "^3.1.0",
     "react": "17.0.2",
     "react-native": "0.68.5",
     "react-native-pager-view": "^6.1.1",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2",
+    "react-native-screens": "3.18.2",
     "react-native-tab-view": "^3.3.0",
     "react-native-webview": "^11.26.0"
   },
