--- a/ReactNativeExample3X/android/app/src/main/AndroidManifest.xml
+++ b/ReactNativeExample3X/android/app/src/main/AndroidManifest.xml
@@ -1,16 +1,15 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.reactnativeexample3x">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-            android:networkSecurityConfig="@xml/security_config"
       android:name=".MainApplication"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
-      android:theme="@style/AppTheme">
+      android:theme="@style/AppTheme"
+      android:supportsRtl="true">
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
