--- a/ReactNativeExample3X/android/settings.gradle
+++ b/ReactNativeExample3X/android/settings.gradle
@@ -1,9 +1,17 @@
-rootProject.name = 'ReactNativeExample3X'
-apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
-include ':app'
-includeBuild('../node_modules/react-native-gradle-plugin')
-
-if (settings.hasProperty("newArchEnabled") && settings.newArchEnabled == "true") {
-    include(":ReactAndroid")
-    project(":ReactAndroid").projectDir = file('../node_modules/react-native/ReactAndroid')
+pluginManagement { includeBuild("../node_modules/@react-native/gradle-plugin") }
+plugins { id("com.facebook.react.settings") }
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
+    repositories {
+        google()
+        mavenCentral()
+        maven {
+            // Taboola:
+            url 'https://taboolapublic.jfrog.io/artifactory/mobile-release'
+        }
+    }
 }
+extensions.configure(com.facebook.react.ReactSettingsExtension){ ex -> ex.autolinkLibrariesFromCommand() }
+rootProject.name = 'ReactNativeExample3X'
+include ':app'
+includeBuild('../node_modules/@react-native/gradle-plugin')
